--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,9 @@
     "type": "project",
     "require": {
         "php": ">=5.5.9",
-        "laravel/framework": "5.2.*"
+        "laravel/framework": "5.2.*",
+        "aws/aws-sdk-php": "~3.0",
+        "anlutro/bulk-sms": "2.*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
