--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "private": true,
   "devDependencies": {
-    "gulp": "^3.8.8"
+    "gulp": "^3.8.8",
+    "laravel-elixir-vueify": "^1.0.3"
   },
   "dependencies": {
     "laravel-elixir": "^4.0.0",
