--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "laravel/framework": "5.2.*",
         "aws/aws-sdk-php": "~3.0",
         "anlutro/bulk-sms": "2.*",
-        "laravelista/ekko": "^1.0"
+        "laravelista/ekko": "^1.0",
+        "laracasts/utilities": "~2.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
