--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravelista/ekko": "^1.0",
         "laracasts/utilities": "~2.0",
         "barryvdh/laravel-snappy": "^0.3.0",
-        "intervention/image": "^2.3"
+        "intervention/image": "^2.3",
+        "guzzlehttp/guzzle": "^6.2"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
