--- a/package.json
+++ b/package.json
@@ -11,27 +11,38 @@
     },
     "devDependencies": {
         "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-        "@inertiajs/inertia": "^0.1.6",
+        "@inertiajs/inertia": "^0.1.7",
         "@inertiajs/inertia-vue": "^0.1.0",
+        "@tailwindcss/custom-forms": "^0.2.1",
         "axios": "^0.19",
         "cross-env": "^5.1",
         "laravel-mix": "^4.0.14",
-        "laravel-mix-purgecss": "^4.1",
-        "laravel-mix-tailwind": "^0.1.0",
         "lodash": "^4.17.13",
+        "postcss-nesting": "^7.0.1",
         "resolve-url-loader": "^2.3.1",
-        "sass": "^1.15.2",
+        "sass": "^1.23.7",
         "sass-loader": "^7.1.0",
-        "tailwindcss": "^1.0",
+        "tailwindcss": "^1.1.3",
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
         "create-react-class": "^15.6.3",
+        "just-clone": "^3.1.0",
+        "just-debounce-it": "^1.1.0",
+        "just-filter-object": "^1.2.0",
+        "just-map-values": "^1.1.0",
+        "just-reduce-object": "^1.1.0",
         "literallycanvas": "^0.5.2",
+        "object-to-formdata": "^2.2.0",
+        "postcss-import": "^12.0.1",
         "react": "^0.14.9",
         "react-dom": "^0.14.9",
         "react-dom-factories": "^1.0.2",
-        "vue-feather-icons": "^5.0.0"
+        "tiptap": "^1.26.4",
+        "tiptap-extensions": "^1.28.4",
+        "vue-clickaway2": "^2.3.1",
+        "vue-feather-icons": "^5.0.0",
+        "vue-meta": "^2.3.1"
     }
 }
