--- a/package.json
+++ b/package.json
@@ -10,21 +10,21 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+        "@babel/plugin-syntax-dynamic-import": "^7.8.3",
         "@inertiajs/inertia": "^0.1.7",
         "@inertiajs/inertia-vue": "^0.1.0",
         "@tailwindcss/custom-forms": "^0.2.1",
-        "axios": "^0.19",
+        "axios": "^0.19.2",
         "cross-env": "^5.1",
         "laravel-mix": "^4.0.14",
         "lodash": "^4.17.13",
         "postcss-nesting": "^7.0.1",
         "resolve-url-loader": "^2.3.1",
-        "sass": "^1.23.7",
+        "sass": "^1.26.1",
         "sass-loader": "^7.1.0",
-        "tailwindcss": "^1.1.3",
-        "vue": "^2.5.17",
-        "vue-template-compiler": "^2.6.10"
+        "tailwindcss": "^1.2.0",
+        "vue": "^2.6.11",
+        "vue-template-compiler": "^2.6.11"
     },
     "dependencies": {
         "create-react-class": "^15.6.3",
@@ -32,17 +32,18 @@
         "just-debounce-it": "^1.1.0",
         "just-filter-object": "^1.2.0",
         "just-map-values": "^1.1.0",
+        "just-merge": "^1.1.0",
         "just-reduce-object": "^1.1.0",
         "literallycanvas": "^0.5.2",
-        "object-to-formdata": "^2.2.0",
+        "object-to-formdata": "^2.3.1",
         "postcss-import": "^12.0.1",
         "react": "^0.14.9",
         "react-dom": "^0.14.9",
         "react-dom-factories": "^1.0.2",
-        "tiptap": "^1.26.4",
-        "tiptap-extensions": "^1.28.4",
+        "tiptap": "^1.26.6",
+        "tiptap-extensions": "^1.28.6",
         "vue-clickaway2": "^2.3.1",
         "vue-feather-icons": "^5.0.0",
-        "vue-meta": "^2.3.1"
+        "vue-meta": "^2.3.2"
     }
 }
