--- a/composer.json
+++ b/composer.json
@@ -10,26 +10,32 @@
     "require": {
         "php": "^7.2.5",
         "fideloper/proxy": "^4.2",
-        "inertiajs/inertia-laravel": "^0.1",
+        "fruitcake/laravel-cors": "^1.0",
+        "guzzlehttp/guzzle": "^6.3",
+        "inertiajs/inertia-laravel": "^0.2.5",
         "laravel/framework": "^7.0",
         "laravel/horizon": "^4.0",
-        "laravel/telescope": "^2.1",
+        "laravel/telescope": "^3.2",
         "laravel/tinker": "^2.0",
-        "spatie/browsershot": "^3.33",
-        "tightenco/ziggy": "^0.8.1",
         "laravel/ui": "^2.0",
-        "fruitcake/laravel-cors": "^1.0",
-        "guzzlehttp/guzzle": "^6.3"
+        "spatie/browsershot": "^3.33",
+        "tightenco/ziggy": "^0.8.1"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
         "fzaninotto/faker": "^1.4",
-        "laravel-frontend-presets/inertiajs": "^0.2.1",
-        "laravel-frontend-presets/tailwindcss": "^2.0",
+        "laravel-frontend-presets/tailwindcss": "^4.0",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^4.1",
-        "phpunit/phpunit": "^8.5"
+        "phpunit/phpunit": "^8.5",
+        "laravel-frontend-presets/inertiajs": "dev-master"
     },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url":  "https://github.com/rokde/inertiajs.git"
+        }
+    ],
     "config": {
         "optimize-autoloader": true,
         "preferred-install": "dist",
