--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
     "repositories": [
         {
             "type": "vcs",
-            "url":  "https://github.com/rokde/inertiajs.git"
+            "url": "https://github.com/rokde/inertiajs.git"
         }
     ],
     "config": {
@@ -48,12 +48,10 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/"
-        },
-        "classmap": [
-            "database/seeds",
-            "database/factories"
-        ]
+            "App\\": "app/",
+            "Database\\Factories\\": "database/factories/",
+            "Database\\Seeders\\": "database/seeders/"
+        }
     },
     "autoload-dev": {
         "psr-4": {
