--- a/composer.json
+++ b/composer.json
@@ -8,27 +8,26 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.2.5",
-        "fideloper/proxy": "^4.2",
-        "fruitcake/laravel-cors": "^1.0",
-        "guzzlehttp/guzzle": "^6.3",
+        "php": "^7.3|^8.0",
+        "fruitcake/laravel-cors": "^2.0",
+        "guzzlehttp/guzzle": "^7.0.1",
         "inertiajs/inertia-laravel": "^0.2.5",
-        "laravel/framework": "^7.0",
-        "laravel/horizon": "^4.0",
-        "laravel/telescope": "^3.2",
-        "laravel/tinker": "^2.0",
-        "laravel/ui": "^2.0",
+        "laravel/framework": "^8.83",
+        "laravel/horizon": "^5.0",
+        "laravel/telescope": "^4.0",
+        "laravel/tinker": "^2.5",
+        "laravel/ui": "^3.0",
         "spatie/browsershot": "^3.33",
         "tightenco/ziggy": "^0.8.1"
     },
     "require-dev": {
-        "facade/ignition": "^2.0",
-        "fzaninotto/faker": "^1.4",
-        "laravel-frontend-presets/tailwindcss": "^4.0",
-        "mockery/mockery": "^1.3.1",
-        "nunomaduro/collision": "^4.1",
-        "phpunit/phpunit": "^8.5",
-        "laravel-frontend-presets/inertiajs": "dev-master"
+        "facade/ignition": "^2.5",
+        "laravel-frontend-presets/tailwindcss": "^4.3",
+        "mockery/mockery": "^1.4.4",
+        "nunomaduro/collision": "^5.10",
+        "phpunit/phpunit": "^9.5.10",
+        "laravel-frontend-presets/inertiajs": "dev-master",
+        "fakerphp/faker": "^1.9.1"
     },
     "repositories": [
         {
@@ -70,6 +69,9 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
+        ],
+        "post-update-cmd": [
+            "@php artisan vendor:publish --tag=laravel-assets --ansi --force"
         ]
     }
 }
