--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
     "private": true,
     "scripts": {
         "dev": "npm run development",
-        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "watch": "npm run development -- --watch",
-        "watch-poll": "npm run watch -- --watch-poll",
-        "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "development": "mix",
+        "watch": "mix watch",
+        "watch-poll": "mix watch -- --watch-options-poll=1000",
+        "hot": "mix watch --hot",
         "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+        "production": "mix --production"
     },
     "devDependencies": {
         "@babel/plugin-syntax-dynamic-import": "^7.8.3",
@@ -15,8 +15,7 @@
         "@inertiajs/inertia-vue": "^0.1.0",
         "@tailwindcss/custom-forms": "^0.2.1",
         "axios": "^0.19.2",
-        "cross-env": "^5.1",
-        "laravel-mix": "^4.0.14",
+        "laravel-mix": "^6.0.12",
         "lodash": "^4.17.13",
         "postcss-nesting": "^7.0.1",
         "resolve-url-loader": "^2.3.1",
@@ -24,7 +23,8 @@
         "sass-loader": "^7.1.0",
         "tailwindcss": "^1.2.0",
         "vue": "^2.6.11",
-        "vue-template-compiler": "^2.6.11"
+        "vue-template-compiler": "^2.6.11",
+        "postcss": "^8.2.8"
     },
     "dependencies": {
         "create-react-class": "^15.6.3",
